--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
             <h1>Einlogggen</h1>
             <!--User Input-->
             <div class="username">
-                <input type="text" placeholder="Benutzernamen Eingeben" id="username">
+                <input type="text" placeholder="Email Eingeben" id="username">
                 <i class="far fa-envelope"></i>
             </div>
 
@@ -28,11 +28,11 @@
                     <i class="far fa-eye-slash password-verstecken-icon"></i>
                 </a>
             </div>
-
+            
             <!--Button Login-->
             <button id="btn-login" type="submit" onclick="validate()">Login</button>
 
-            <!--Button Sign in-->
+            <!--Button Regestrierung-->
             <a href="../html/regestration.html" class="link">Regestrieren</a>
         </form>
     </div>
