--- a/html/regestration.html
+++ b/html/regestration.html
@@ -14,7 +14,7 @@
             <h1>Regestrieren</h1>
             <!--User Input-->
             <div class="username">
-                <input type="text" placeholder="Benutzernamen Eingeben" id="username">
+                <input type="text" placeholder="Email Eingeben" id="username">
                 <i class="far fa-envelope"></i>
             </div>
 
@@ -29,12 +29,13 @@
                 </a>
             </div>
 
+
             <!--Button-->
             <button id="btn" type="submit" onclick="validate()">Account erstellen</button>
 
             <!--Sign in-->
             <div class="Signin">
-                <a href="../html/login.html" class="link">Ein Loggen</a>
+                <a href="../html/login.html" class="link">Login</a>
             </div>
 
         </form>
