--- a/html/start.html
+++ b/html/start.html
@@ -12,22 +12,23 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">About</a>
         <a href="#">Services</a>
-
-        <button class="dropdown-btn">Login
+        <button class="dropdown-btn">Anmelden
             <i class="fa fa-caret-down"></i>
           </button>
         <div class="dropdown-container">
             <a href="login.html">Login</a>
             <a href="regestration.html">Regestrieren</a>
         </div>
-
         <a href="#">Help</a>
-
     </div>
-      
       <button class="openbtn" onclick="openNav()">&#9776;</button>
 
-
+    <div id="willkommen-container">
+        <div class="willkommen">
+            <h1>Willkommen</h1>
+            <p>Wir zeigen ihnen ihr Wetter passend zum Reiseziel</p>
+        </div>
+    </div>
 
       <script src="../js/app.js"></script>
 </body>
