--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
 <body>
     <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
+        <a href="home.html">Home</a>
         <a href="#">Services</a>
         <button class="dropdown-btn">Anmelden
             <i class="fa fa-caret-down"></i>
@@ -23,7 +23,7 @@
         <a href="#">Help</a>
     </div>
       <button class="openbtn" onclick="openNav()">&#9776;</button>
-      
+
     <div class="wrapper">
         <form class="box">
             <h1>Einlogggen</h1>
@@ -35,7 +35,7 @@
 
             <!-- Password Input-->
             <div class="password">
-                <input type="text" placeholder="Password Eingeben" id="password" class="passwort-feld">
+                <input type="password" placeholder="Password Eingeben" id="password" class="passwort-feld">
                 <i class="fas fa-lock-open"></i>
                 <a role="button" class="password-button" onclick="passwortSichtbarkeitUmschalten('password')">
                     <!--Passwort verstecken button-->
@@ -45,12 +45,11 @@
             </div>
             
 
-            <div class="login-signin">
+            <div class="buttons">
                 <!--Button Login-->
                 <button id="btn-login" type="submit" onclick="validate()">Login</button>
-
                 <!--Button Regestrierung-->
-                 <a href="../html/regestration.html" class="link">Regestrieren</a>
+                <a href="../html/regestration.html" class="link">Regestrieren</a>
             </div>
         </form>
     </div>
