--- a/html/regestration.html
+++ b/html/regestration.html
@@ -20,7 +20,7 @@
 
             <!-- Password Input-->
             <div class="password">
-                <input type="text" placeholder="Password Eingeben" id="password" class="passwort-feld">
+                <input type="password" placeholder="Password Eingeben" id="password" class="passwort-feld">
                 <i class="fas fa-lock-open"></i>
                 <a role="button" class="password-button" onclick="passwortSichtbarkeitUmschalten('password')">
                     <!--Passwort verstecken button-->
@@ -34,9 +34,7 @@
             <button id="btn" type="submit" onclick="validate()">Account erstellen</button>
 
             <!--Sign in-->
-            <div class="Signin">
-                <a href="../html/login.html" class="link">Login</a>
-            </div>
+            <a href="../html/login.html" class="link">Login</a>
 
         </form>
     </div>
