wetter api einbindung

--- a/html/home.html
+++ b/html/home.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/start.css">
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="box">
+        <h1 id="city">Stadt</h1>
+        <h1 id="temp">Temperatur</h1>
+        <h1 id="description">--</h1>
+        <h1 id="windSpeed">km/h</h1>
+        <img src="http://openweathermap.org/img/wn/01d@2x.png" id="anzeige">
+        <input type="text" id="location">
+        <button onclick="getWeatherdata()">Knopf</button>
+    </div>
+
+
+    <script src="../js/app.js"></script>
 </body>
 </html>
