--- a/html/login.html
+++ b/html/login.html
@@ -11,8 +11,8 @@
 <body>
     <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="start.html">Start</a>
         <a href="home.html">Home</a>
-        <a href="#">Services</a>
         <button class="dropdown-btn">Anmelden
             <i class="fa fa-caret-down"></i>
           </button>
