--- a/html/start.html
+++ b/html/start.html
@@ -12,7 +12,7 @@
     <div id="mySidepanel" class="sidepanel">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a id="Start-html" href="#">Start</a>
-        <a href="#">Services</a>
+        <a href="home.html">Home</a>
         <button class="dropdown-btn">Anmelden
             <i class="fa fa-caret-down"></i>
           </button>
